Improved Modal designs to avoid any hardcoded alignment

--- a/resources/sass/components/services/_assignClientModal.scss
+++ b/resources/sass/components/services/_assignClientModal.scss
@@ -3,5 +3,29 @@
 .assign-modal {
   .assign-form {
     width: 520px;
+
+    h3 {
+      font-size: 2rem;
+    }
+
+    .modal-actions {
+      width: 100%;
+    }
+  
+    footer.modal-card-foot {
+      padding: 10px;
+    }
+  
+    .modal-actions {
+      width: 100%;
+    }
+  
+    footer.modal-card-foot {
+      padding: 10px;
+    }
+
+    .no-top-padding {
+      padding-top: 0;
+    }
   }
 }
