--- a/resources/sass/components/services/_deleteServiceModal.scss
+++ b/resources/sass/components/services/_deleteServiceModal.scss
@@ -9,14 +9,7 @@
     width: 100%;
   }
 
-  .modal-buttons {
-    float: right;
-    position: relative;
-    right: 0.6rem;
-    margin-left: 0.6rem;
-  }
-
   footer.modal-card-foot {
-    padding: 10px;
+    padding: 0;
   }
 }
